RAID-64: Add validation for spatial coverage.